Fix stack spacing when in vertical mode

--- a/src/components/Stack/Stack.module.css
+++ b/src/components/Stack/Stack.module.css
@@ -6,8 +6,12 @@
   @apply ml-2 mt-2 max-w-full min-w-0 flex-0;
 }
 
-.Item.loose {
-  @apply ml-6;
+.spacingLoose {
+  @apply -ml-6 -mt-6;
+
+  & > .Item {
+    @apply ml-6 mt-6;
+  }
 }
 
 .distributionEqualSpacing {
@@ -43,7 +47,11 @@
 }
 
 .vertical {
-  @apply flex-col;
+  @apply flex-col ml-0;
+
+  .Item {
+    @apply ml-0;
+  }
 }
 
 .alignmentLeading {
@@ -64,4 +72,8 @@
 
 .alignmentBaseline {
   @apply items-baseline;
+}
+
+.noWrap {
+  @apply flex-no-wrap;
 }
